Fix bg video position on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -78,10 +78,10 @@ a:hover.youtube {
 
 .bg-video {
     position: fixed;
-    top: 0%;
-    left: -50%;
     min-width: 100%;
     min-height: 100%;
+    top: 0%;
+    left: -130%;
     z-index: -1;
 }
 
